[tool.poetry]
name = "ouch"
version = "0.1.0"
description = ""
authors = ["Vivek Ranjan <vivek@vivekranjan.me>"]
readme = "README.md"
#package-mode = false
packages = [
    { include = "*.py" }
]

[tool.poetry.dependencies]
python = "^3.12.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
httpx = "^0.28.1"


pydantic-settings = "^2.7.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:start"
